--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -139,6 +139,7 @@ jobs:
 
   allure-report:
     needs: [linux]
+    runs-on: ubuntu-latest
     steps:
       - name: Download test results
         uses: actions/download-artifact@v3
